--- a/src/pages/Blog.module.css
+++ b/src/pages/Blog.module.css
@@ -444,7 +444,7 @@ body.menu-open {
 .social-icon img {
     width: 20px;
     height: 20px;
-    filter: brightness(0) invert(1);
+    /* filter: brightness(0) invert(1); */
 }
 
 .footer-bottom {
