--- a/src/pages/EsqueciSenha.module.css
+++ b/src/pages/EsqueciSenha.module.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
-/* ===== ROOT ===== */
-:root {
+/* ===== VARIABLES LOCAL ===== */
+.container {
     /* Fontes */
     --font-principal: 'Raleway', sans-serif;
     --font-alternativa: Arial, sans-serif;
